Resolve git problems

--- a/App/html/transactions.html
+++ b/App/html/transactions.html
@@ -20,7 +20,7 @@
 					<div class="menuButtons">
 						<a href="budget.html" class="menuButton budgetButton ">Budżet</a>
 						<a href="transactions.html" class="menuButton transactionsButton activeMenu">Transakcje</a>
-						<a href="reports.html" class="menuButton reportsButton">Raporty</a>
+						<span class="menuButton reportsButton">Raporty</span>
 					</div>
 					<div class="menuAccounts">
 						<div class="accounts">
@@ -151,7 +151,7 @@
 							<td class="tranElem tranName hid">Rachunek za internet</td>
 							<td class="tranElem tranCat hid">Telefon, internet</td>
 							<td class="tranElem tranCost">-50,00 zł</td>
-							<td class="tranElem tranAccept"><img src="../images/icons/svg/accept-orange.svg"
+							<td class="tranElem tranAccept not"><img src="../images/icons/svg/accept-orange.svg"
 							                                     alt="Akceptacja" style="width: 25px"></td>
 						</tr>
 						</tbody>
