Small changes in settings modal and repeat password in form added

--- a/App/html/budget.html
+++ b/App/html/budget.html
@@ -15,12 +15,13 @@
                     .getElementById("settingsOn")
                     .style
                     .cssText = "top:0px";
+
                 document.getElementById("blurDiv").style.cssText = "filter:blur(15px)";
                 window.scrollTo(0, 0);
             }
             function hideModalSettings() {
                 document.getElementById("blurDiv").style.cssText = "filter:none";
-                document.getElementById("settingsOn").style.cssText = "top:-450px";
+                document.getElementById("settingsOn").style.cssText = "top:-500px;";
             }
 		</script>
 	</head>
