JS sign up form validation ready

--- a/App/html/sign-up.html
+++ b/App/html/sign-up.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="../css/master.css">
 		<link rel="stylesheet" href="../css/responsive.css">
 		<title>FBO | Zarejestruj się</title>
+		<script src="../js/signUpValidation.js"></script>
 	</head>
 	<body class="widthLimit">
 		<header class="header">
@@ -22,34 +23,31 @@
 		<main>
 			<section class="signSection">
 				<h1 class="signTitle  hideTitle">Rejestracja użytkownika</h1>
-				<form class="formDiv" action="" method="post">
-					<div class="formElement">
-						<span>Imie</span>
-						<input type="text" name="firstname" maxlength="50" title="Podaj swoje imię" autofocus>
+				<form class="formDiv" id="signUpForm" action="" method="post">
+					<div class="formElement" id="firstNameElement">
+						<span>Imię</span>
+						<input class="" type="text" name="firstname" maxlength="50" title="Podaj swoje imię" autofocus onfocusout="validate('firstNameElement')">
+						<span class="formErrorMsg ok"></span>
 					</div>
-					<div class="formElement">
+					<div class="formElement" id="mailElement">
 						<span>Adres e-mail</span>
-						<input type="email" name="email" maxlength="50" title="Podaj swój adres e-mail">
+						<input class="" type="email" name="email" maxlength="50" title="Podaj swój adres e-mail" onfocusout="validate('mailElement')">
+						<span class="formErrorMsg ok"></span>
 					</div>
-					<div class="formElement">
+					<div class="formElement" id="passwordElement">
 						<span>Hasło</span>
 						<input class="" type="password" name="password" minlength="8" maxlength="20"
-						       title="Podaj swoje hasło">
-						<span class="passwordOk">Hasło musi zawierać co najmniej 8 znaków</span>
+						       title="Podaj swoje hasło" onfocusout="validate('passwordElement')">
+						<span class="formErrorMsg ok"></span>
 					</div>
-					<div class="formElement">
+					<div class="formElement" id="passwordRepeatElement">
 						<span>Powtórz hasło</span>
-						<input class="" type="password" name="password" minlength="8" maxlength="20"
-						       title="Podaj swoje hasło">
-						<span class="passwordOk">Hasło musi zawierać co najmniej 8 znaków</span>
-					</div>
-					<div class="formElement">
-						<span>Wiek</span>
-						<input type="date" name="dateOfBirth" placeholder="DD.MM.RRRR" max="31.05.2017"
-						       title="Podaj swoją datę urodzenia. Przyda się ona do obliczeń związanych z emeryturą. ">
+						<input class="" type="password" name="passwordRepeat" minlength="8" maxlength="20"
+						       title="Podaj swoje hasło" onfocusout="validate('passwordRepeatElement')">
+						<span class="formErrorMsg ok"></span>
 					</div>
 					<div class="buttonDiv">
-						<input class="button" type="submit" value="Zarejestruj mnie" style="cursor:pointer">
+						<input id="submitButton" class="button" type="submit" value="Zarejestruj mnie" style="cursor:pointer" disabled>
 					</div>
 				</form>
 			</section>
