Sign up page ready and tested

--- a/App/index.html
+++ b/App/index.html
@@ -24,7 +24,7 @@
 				<a id="linkHome" href="http://marciniwuc.com">Blog</a>
 			</div>
 			<div class="navElement">
-				<a id="linkLoginPage" href="html/sign-in.html">Logowanie</a>
+				<a id="linkLoginPage" href="html/sign-in.php">Logowanie</a>
 			</div>
 		</nav>
 		<main>
