Sticky budget description (cleaning)

--- a/App/html/budget.html
+++ b/App/html/budget.html
@@ -100,10 +100,10 @@
 					<table class="budgetTable">
 						<thead>
 						<tr class="budDesc">
-							<th class="budDescName" id="1">Kategoria</th>
-							<th class="budDescAmount hideable" id="2">Rozdysponowane</th>
-							<th class="budDescAmount hideable" id="3">Wydane</th>
-							<th class="budDescAmount" id="4">Dostępne</th>
+							<th class="budDescName">Kategoria</th>
+							<th class="budDescAmount hideable">Rozdysponowane</th>
+							<th class="budDescAmount hideable">Wydane</th>
+							<th class="budDescAmount">Dostępne</th>
 						</tr>
 						</thead>
 						<tbody>
