--- a/App/html/transactions.html
+++ b/App/html/transactions.html
@@ -32,7 +32,7 @@
 						<img src="../images/baners/logo-white.png" alt="Logo FBO">
 					</div>
 					<div class="menuButtons">
-						<a href="budget.html" class="menuButton budgetButton ">Budżet</a>
+						<a href="budget.php" class="menuButton budgetButton ">Budżet</a>
 						<a href="transactions.html" class="menuButton transactionsButton activeMenu">Transakcje</a>
 						<span class="menuButton reportsButton">Raporty</span>
 					</div>
